# advance-python-sf

./: README.md  course_outline.md  requirements.txt
Day 1/advanced_oop/: README.md
Day 1/advanced_oop/workbooks_empty/: 02_metaclasses_intro.py  03_metaclasses_usage.py  04_class_decorators.py  05_descriptor_protocol.py  07_custom_descriptors.py  08_practical_examples.py
Day 1/advanced_oop/workbooks_full/: 01_object_model_fundamentals.py  02_metaclasses_intro.py  03_metaclasses_usage.py  05_descriptor_protocol.py  06_property_descriptor.py
Day 1/decorators/: README.md
Day 1/decorators/workbooks_empty/: 01_functions_as_objects.py  02_decorator_foundations.py  03_decorator_syntax.py  04_preserving_metadata.py  05_decorators_with_arguments.py  06_class_decorators.py  07_method_class_decorators.py  09_debugging_and_testing.py
Day 1/decorators/workbooks_full/: 01_functions_as_objects.py  02_decorator_foundations.py  03_decorator_syntax.py  04_preserving_metadata.py  05_decorators_with_arguments.py  06_class_decorators.py  07_method_class_decorators.py  08_practical_decorator_patterns.py
Day 1/generators_iterators_cm/: README.md
Day 1/generators_iterators_cm/workbooks_empty/: 01_2_iteration_fundamentals.py  01_iteration_fundamentals.py  02_advanced_iterators.py  03_generators_intro.py  04_advanced_generators.py  05_itertools_module.py  06_2_context_managers.py  06_context_managers.py  (+1 more)
Day 2/data_analysis/: 01_numpy_basics.py  02_numpy_advanced.py  03_pandas_basics.py  04_pandas_advanced.py  05_matplotlib_basics.py  06_integrated_analysis.py  README.md
Day 2/debugging/: 01_debugging_basics.py  02_python_debugger.py  03_vscode_debugger.py  04_common_bugs.py  05_profiling.py  06_real_world_debugging.py  README.md
Day 2/python_package/solution/data_wizard/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
Day 2/python_package/solution/data_wizard/examples/: basic_usage.py
Day 2/python_package/solution/data_wizard/src/data_wizard/: __init__.py  processor.py  stats.py  utils.py
Day 2/python_package/solution/data_wizard/tests/: test_processor.py  test_stats.py  test_utils.py
Day 3/async/: 01_concurrency_intro.py  02_sync_vs_async.py  03_asyncio_basics.py  04_coroutines.py  05_async_with_await.py  06_tasks_futures.py  07_async_patterns.py  08_error_handling.py  README.md
Day 3/databases/: 01_databases_intro.py  02_sqlite_basics.py  03_sqlalchemy_intro.py  04_sqlalchemy_models.py  05_sqlalchemy_relationships.py  06_sqlalchemy_queries.py  07_mongodb_intro.py  08_pymongo_basics.py  09_mongodb_queries.py
(+41 files in other folders)
