[metadata]
name = data-wizard
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python package for easy data processing and statistical analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/data-wizard
project_urls =
    Bug Tracker = https://github.com/yourusername/data-wizard/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=1.3.0
    numpy>=1.20.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=22.0
    isort>=5.0
    flake8>=3.9

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=data_wizard --cov-report=term-missing

[coverage:run]
source = data_wizard
omit = tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:
    raise NotImplementedError 